Added Web Support

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Bibek Timsina\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=/home/hritik/Android/Sdk
+flutter.sdk=/home/hritik/flutter
 flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
